--- a/credentialsDontPost/.env
+++ b/credentialsDontPost/.env
@@ -1,1 +1,2 @@
-MONGO_CONNECTION_STRING = mongodb+srv://djamo1:<db_password>@cluster0.cexiaka.mongodb.net/?appName=Cluster0
+MONGO_CONNECTION_STRING = mongodb+srv://djamo1:danny109@cluster0.cexiaka.mongodb.net/?appName=Cluster0
+
